[gd_scene load_steps=6 format=1]

[ext_resource path="res://player/player.gd" type="Script" id=1]
[ext_resource path="res://player/assets/play.png" type="Texture" id=2]
[ext_resource path="res://player/assets/stop.png" type="Texture" id=3]
[ext_resource path="res://player/assets/shuffle.png" type="Texture" id=4]
[ext_resource path="res://player/assets/clean.png" type="Texture" id=5]

[node name="Player" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
script/script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]

margin/left = 576.0
margin/right = 640.0
margin/bottom = 400.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
margin/left = -586.0
margin/right = -630.0
margin/bottom = -400.0
focus/ignore_mouse = false
focus/stop_mouse = false
custom_constants/separation = 16
alignment = 1

[node name="Play" type="Button" parent="VBoxContainer"]

margin/top = 100.0
margin/right = 44.0
margin/bottom = 138.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
toggle_mode = false
icon = ExtResource( 2 )
flat = true

[node name="Stop" type="Button" parent="VBoxContainer"]

margin/top = 154.0
margin/right = 44.0
margin/bottom = 192.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
toggle_mode = false
icon = ExtResource( 3 )
flat = true

[node name="Shuffle" type="Button" parent="VBoxContainer"]

margin/top = 208.0
margin/right = 44.0
margin/bottom = 246.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
toggle_mode = false
icon = ExtResource( 4 )
flat = true

[node name="Clean" type="Button" parent="VBoxContainer"]

margin/top = 262.0
margin/right = 44.0
margin/bottom = 300.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
toggle_mode = false
icon = ExtResource( 5 )
flat = true

[connection signal="pressed" from="VBoxContainer/Play" to="." method="trigger_play"]

[connection signal="pressed" from="VBoxContainer/Stop" to="." method="trigger_stop"]

[connection signal="pressed" from="VBoxContainer/Shuffle" to="." method="trigger_shuffle"]

[connection signal="pressed" from="VBoxContainer/Clean" to="." method="trigger_clean"]


